# rcp-pallete

./: Cargo.toml  Makefile  README.md  colors.txt
src/: lib.rs  main.rs
tests/: color-parsing-test.rs
